--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -25,7 +25,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            cd /home/ubuntu/uptime-server
+            cd /home/ubuntu/upbot-server
             sudo git pull origin main 
             sudo npm run build
-            pm2 restart 4
+            sudo pm2 restart 4
