--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev":"nodemon src/index.ts", 
-    "start":"node dist/index.ts",
+    "dev": "nodemon src/index.ts",
+    "start": "node dist/index.ts",
     "build": "tsc -b",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,10 +20,12 @@
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "axios": "^1.7.7",
+    "bullmq": "^5.13.2",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "ioredis": "^5.4.1",
     "mongoose": "^8.6.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.6",
