--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -27,5 +27,6 @@ jobs:
           script: |
             cd /home/ubuntu/upbot-server
             sudo git pull origin main 
+            sudo npm install
             sudo npm run build
-            sudo pm2 restart 4
+            sudo pm2 restart upbot
