--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "ioredis": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.6",
-    "winston": "^3.14.2"
+    "winston": "^3.14.2",
+    "zod": "^3.23.8",
+    "zod-error": "^1.5.0"
   }
 }
